[tool.poetry]
name = "image-checker"
version = "0.27.1"
description = "Check for corrupted images using Nvidia DALI"
authors = ["Ceyda Cinarel <snu-ceyda@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cceyda/image-checker"
keywords = ["image checker","image integrity checker"]


[tool.poetry.dependencies]
python = "^3.5"
more-itertools = "^8.6.0"
tqdm = "^4.51.0"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
image-checker = 'image_checker.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
